--- a/manifest.json
+++ b/manifest.json
@@ -73,6 +73,24 @@
     "mp-toutiao" : {
         "usingComponents" : true
     },
+	"h5" : {
+		"devServer" : {
+			"port" : 8000, //端口
+			"disableHostCheck" : true,
+			"proxy" : {
+				//使用代理
+				"/api" : {
+					// "target": "http://47.115.83.135/api/v2",
+					"target" : "http://ts.lagou.uieee.com/api/v2",
+					"changeOrigin" : true,
+					"pathRewrite" : {
+						"^/api" : ""
+					}
+				}
+			}
+		},
+		"title" : "jxsns"
+	},
     "uniStatistics" : {
         "enable" : false
     }
